gccida/g3/parse_string
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1092:21: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  parse_string( cpp_reader_0 *pfile, cpp_token_0 *token, cppchar_t terminator) 
                    ^~~~~~~~~~~~
                    cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1092:42: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
void  parse_string( cpp_reader_0 *pfile, cpp_token_0 *token, cppchar_t terminator) 
                                         ^~~~~~~~~~~
                                         cpp_token
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1094:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *u_buff; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1095:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // r15 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1098:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v9; // rsi 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1105:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v16; // r14 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1106:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *free_buffs; // rbx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1107:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v18; // rsi 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1116:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *v27; // r14 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1117:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v28; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1122:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_free_buffs; // [rsp+18h] [rbp-40h] 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1137:22: error: expected expression
v18 = ( _cpp_buff_0 *)p_free_buffs; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1137:9: error: use of undeclared identifier '_cpp_buff_0'
v18 = ( _cpp_buff_0 *)p_free_buffs; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1166:29: error: expected expression
free_buffs = ( _cpp_buff_0 *)&v26[v25]; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1166:16: error: use of undeclared identifier '_cpp_buff_0'
free_buffs = ( _cpp_buff_0 *)&v26[v25]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1216:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v13] & 0x400) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/cpplex.c:1269:116: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&pfile->mls_line = _mm_unpacklo_epi32( _mm_cvtsi32_si128( token->line), _mm_cvtsi32_si128( token->col)).m128i_u64[0]; 
                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_string/src/obj/cpplex.o] Error 1
